<resources>
    <string name="app_name">S2D Vendor</string>

    <string name="net_connection">Please check your internet connection</string>

    <!--image description-->
    <string name="splash_bg">splash_bg</string>
    <string name="circle">circle</string>
    <string name="show_password">show_password</string>
    <string name="logout_bg">logout_bg</string>
    <string name="back_bg">back_bg</string>

    <!--Login Screen String-->
    <string name="registration">Registration</string>
    <string name="login">Login</string>
    <string name="welcome_back">Welcome Back,</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="email_phone">Email/Phone</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="loading">Loading…</string>

    <!--Validation-->
    <string name="valid_email_phone">Please enter email/phone</string>
    <string name="valid_email_phone_valid">Please enter valid email/phone</string>
    <string name="valid_password">Please enter password.</string>
    <string name="valid_length_phone_name">Please enter valid phone number</string>
    <string name="valid_email">Please enter valid email</string>

    <!--Alert Message-->
    <string name="logout_message">Are you sure you want to logout?</string>
    <string name="yes_text">Yes</string>
    <string name="no_text">No</string>
    <string name="logout">Logout</string>
    <string name="pendingimagebg">PendingImageBg</string>
    <string name="rs">\u20B9</string>
    <string name="no_of_items">No of items</string>
    <string name="total_amount">Total Amount: </string>
    <string name="total_order_qty">Total Order Qty: </string>
    <string name="qty">"Qty: "</string>
    <string name="full_name">Full Name</string>
    <string name="sub_total">Sub Total</string>
    <string name="total_amount_paid">Total Amount Paid</string>
    <string name="email">Email: </string>
    <string name="mobil_number">Mobile Number</string>
    <string name="delivery">Delivery</string>
    <string name="items">Items</string>
    <string name="please_enter_your_note">Please enter your note</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="ph">Ph: </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reports_transactions">Reports Transactions</string>
    <string name="purchase_order">Purchase Orders</string>
    <string name="navigation_drawer_open">OpenDrawer</string>
    <string name="navigation_drawer_close">CloseDrawer</string>
    <string name="dashbord">Dashboard</string>
    <string name="no_order_found">No order found</string>
    <string name="purchase_Orders_details">Purchase Order Details</string>
    <string name="orders_Request_details">Order Request Details</string>
    <string name="delivery_note">Delivery Note:</string>
    <string name="product_list">Product List</string>
    <string name="plus_product_bg">plus_Product_bg</string>
    <string name="minus_product_bg">minus_Product_bg</string>
    <string name="import_product">Import Product</string>
    <string name="import_product_list">Import Product List</string>
    <string name="order_request_list">Order Request List</string>
    <string name="already_added">Already added</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="accept_confirmation">Are you sure to accept this order requst?</string>
    <string name="decline_confirmation">Are you sure to decline this order requst?</string>
    <string name="price">Price</string>
    <string name="price_coloum">Price: </string>
    <string name="change_order">Change Order</string>
    <string name="change_order_description">"Do you really want to change this item price &amp; quantity?"</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="delete_confirmation">Are you sure you want to delete this product?</string>
    <string name="update_confirmation">Are you sure you want to update this product?</string>
    <string name="colon">:</string>

    <string name="qty_without">"Qty"</string>
    <string name="valid_price">Please enter valid price.</string>
    <string name="valid_qty">Please enter valid quantity.</string>
    <string name="search">Search</string>
    <string name="done">Done</string>

</resources>
