<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:title="@string/dashbord"
        android:icon="@drawable/ic_dashboard"
        android:id="@+id/navOptionDashboard" />
    <item
        android:title="@string/product_list"
        android:icon="@drawable/ic_product_list"
        android:id="@+id/navOptionProductList" />
   <item
        android:title="@string/import_product_list"
        android:icon="@drawable/ic_order_list"
        android:id="@+id/navOptionImportProductList" />
  <item
        android:title="@string/order_request_list"
        android:icon="@drawable/ic_request_list"
        android:id="@+id/navOptionOrderRequestList" />
   <item
        android:title="@string/reports_transactions"
        android:icon="@drawable/ic_transction"
        android:id="@+id/navOptionTransaction" />
    <item
        android:title="@string/logout"
        android:icon="@drawable/ic_iconfinder_logout"
        android:id="@+id/navOptionLogout" />

</menu>