<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/_10sdp"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_10sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:padding="@dimen/_5sdp"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/text_16"
            android:text="@string/delivery"
            android:layout_marginTop="@dimen/_5sdp"
            android:textColor="@color/colorBlack" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="4"
            style="@style/text_14"
            android:id="@+id/etNoteDelivery"
            android:inputType="textMultiLine"
            android:hint="@string/please_enter_your_note"
            tools:ignore="Autofill"
            android:gravity="top|start"
            android:padding="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/et_border" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/et_border"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/colorPrimary"
                style="@style/text_16"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/_5sdp"
                android:id="@+id/tvCancelButton"
                android:layout_gravity="center"
                android:gravity="center"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:text="@string/cancel" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/_5sdp"
                android:background="@drawable/bg_button"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/colorWhite"
                style="@style/text_16"
                android:id="@+id/tvSubmitButton"
                android:layout_gravity="center"
                android:gravity="center"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:text="@string/submit" />
        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>
