<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/color_FCFCFC"
    android:orientation="vertical">

    <include layout="@layout/app_bar_layout" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:orientation="vertical"
            tools:context=".ProductDetailActivity">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="@dimen/_60sdp"
                    android:src="@drawable/cake"
                    android:scaleType="centerCrop"
                    android:background="@color/color_F3F4F6"
                    android:id="@+id/ivProductImage"
                    android:contentDescription="@string/pendingimagebg" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_5sdp"
                    android:background="@color/colorWhite">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/text_12"
                        android:text="@string/product_list"
                        android:textColor="@color/colorPrimary"
                        android:id="@+id/tvProductTitle" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/text_10"
                        android:text="@string/product_list"
                        android:id="@+id/tvProductDescription" />

                </LinearLayout>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rvPriceListImport"/>
        </LinearLayout>


    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:visibility="gone"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            style="@style/text_14"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            android:id="@+id/tvDeleteImport"
            android:text="@string/delete" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/text_14"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:id="@+id/tvUpdateImport"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:layout_weight="1"
            android:text="@string/update" />
    </LinearLayout>

</LinearLayout>
